chore(*): Adding docs
