# python/swagger.yml
@@ -3,16 +3,6 @@ info:
   title: Flask API for the Letters Project
   version: 1.0.0
 paths:
-  /:
-    get:
-      summary: Get the API root
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: string
   /circles:
     get:
       summary: Get all circles
